[workspace]
members = ["common", "weibo", "weverse", "weverse/vod-downloader", "sns-archive"]

[workspace.package]
version = "0.1.3"
authors = ["Evan Chang"]
description = "Unified social media archiver"
license = "GPL-3.0-only"

[workspace.dependencies]
anyhow = "1.0"
async-once-cell = "0.4"
async-trait = "0.1"
base64 = "0.13"
chrono = "0.4"
clap = "4.0"
directories = "4.0"
dotenv = "0.15"
filetime = "0.2"
fs_extra = "1.2"
futures = "0.3"
hmac = "0.12"
home-dir = "0.1"
htmlescape = "0.3"
indicatif = "0.17"
infer = "0.8"
itertools = "0.10"
lazy_static = "1.4"
once_cell = "1.17"
regex = "1.5"
reqwest = "0.11"
sanitize-filename = "0.4"
scraper = "0.13"
serde = "1.0"
serde_json = "1.0"
sha1 = "0.10"
tempfile = "3.3"
thirtyfour = "0.29"
time = "0.3"
tokio = "1.21"
toml = "0.5"
unicode-segmentation = "1.9"
url = "2.2"
uuid = "1.2"
