[workspace]
members = ["common", "weibo", "weverse", "tiktok", "sns-archive"]

[workspace.package]
version = "0.3.5"
authors = ["Evan Chang"]
description = "Unified social media archiver"
license = "GPL-3.0-only"

[workspace.dependencies]
anyhow = "1.0"
async-once-cell = "0.5"
async-trait = "0.1"
base64 = "0.21"
chrono = "0.4"
clap = "4.3"
directories = "5.0"
dotenv = "0.15"
filetime = "0.2"
fs_extra = "1.3"
futures = "0.3"
glob = "0.3"
hmac = "0.12"
home-dir = "0.1"
htmlescape = "0.3"
indexmap = "1.9"
indicatif = "0.17"
infer = "0.13"
itertools = "0.10"
js-sandbox = "0.1"
lazy_static = "1.4"
once_cell = "1.18"
regex = "1.8"
reqwest = "0.11"
sanitize-filename = "0.4"
scraper = "0.16"
serde = "1.0"
serde_json = "1.0"
sha1 = "0.10"
tempfile = "3.6"
thirtyfour = "0.31"
time = "0.3"
tokio = "1.28"
toml = "0.7"
unicode-segmentation = "1.10"
url = "2.4"
uuid = "1.3"
