[profile.release]
strip = true
lto = "fat"

[workspace]
members = ["common", "weibo", "weverse", "tiktok", "sns-archive", "naver-blog", "naver-blog-bin"]
resolver = "2"

[workspace.package]
version = "0.5.12"
authors = ["Evan Chang"]
description = "Unified social media archiver"
license = "GPL-3.0-only"

[workspace.dependencies]
anyhow = "1.0"
async-once-cell = "0.5"
async-trait = "0.1"
base64 = "0.22"
chrono = "0.4"
clap = "4.0"
directories = "6.0"
dotenv = "0.15"
eframe = "0.31.0"
filetime = "0.2"
fs_extra = "1.3"
futures = "0.3"
glob = "0.3"
hmac = "0.12"
home-dir = "0.1"
htmlescape = "0.3"
htmlize = "1.0.5"
indexmap = "2.7"
indicatif = "0.17"
infer = "0.19"
itertools = "0.14"
jiff = "0.2.0"
js-sandbox = "0.1"
klask = { git = "https://github.com/evanc577/klask.git" }
lazy_static = "1.5"
once_cell = "1.20"
page-turner = "1.0.0"
regex = "1.11"
reqwest = "0.12"
sanitize-filename = "0.6"
scraper = "0.22"
serde = "1.0"
serde_json = "1.0"
sha1 = "0.10"
tempfile = "3.16"
thirtyfour = "0.35"
thiserror = "2.0.11"
time = "0.3"
tokio = "1.43"
toml = "0.8"
unicode-segmentation = "1.12"
url = "2.5"
urlencoding = "2.1.3"
uuid = "1.13"
