[package]
name = "sns_archive_common"
edition = "2021"
authors.workspace = true
version.workspace = true
description.workspace = true
license.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
filetime = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, default-features = false }
