[package]
name = "naver-blog"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
futures = { workspace = true }
indicatif = { workspace = true }
infer = { workspace = true }
jiff = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
sanitize-filename = { workspace = true }
scraper = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
unicode-segmentation = "1.12"
