[package]
name = "naver-blog"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
futures = { workspace = true }
htmlize = { workspace = true, features = ["unescape"] }
infer = { workspace = true }
jiff = { workspace = true }
page-turner = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls"] }
sanitize-filename = { workspace = true }
scraper = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
unicode-segmentation = { workspace = true }
urlencoding = { workspace = true }
