[package]
name = "sns-archive"
edition = "2021"
authors.workspace = true
version.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
directories = { workspace = true }
fs_extra = { workspace = true }
futures = { workspace = true }
home-dir = { workspace = true }
htmlescape = { workspace = true }
indicatif = { workspace = true }
itertools = { workspace = true }
sanitize-filename = { workspace = true }
scraper = { workspace = true }
sns_archive_common = { path = "../common" }
tempfile = { workspace = true }
url = { workspace = true }
unicode-segmentation = { workspace = true }
infer = { workspace = true }
thirtyfour = { workspace = true }
weverse = { path = "../weverse" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.clap]
workspace = true
features = ["derive"]

[dependencies.chrono]
workspace = true
default-features = false
features = ["std"]

[dependencies.lazy_static]
workspace = true
default-features = false

[dependencies.regex]
workspace = true
default-features = false
features = ["std"]

[dependencies.reqwest]
workspace = true
default-features = false
features = ["rustls-tls", "json", "stream"]

[dependencies.serde]
workspace = true
default-features = false
features = ["derive"]

[dependencies.serde_json]
workspace = true
default-features = false

[dependencies.tokio]
workspace = true
features = [
  "macros",
  "io-util",
  "io-std",
  "sync",
  "time",
  "rt-multi-thread",
  "fs",
  "process",
]

[dependencies.toml]
workspace = true
default-features = false
