[package]
name = "sns-archive"
edition = "2021"
authors.workspace = true
version.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
directories = { workspace = true }
fs_extra = { workspace = true }
futures = { workspace = true }
htmlescape = { workspace = true }
indicatif = { workspace = true }
infer = { workspace = true }
itertools = { workspace = true }
once_cell = { workspace = true }
sanitize-filename = { workspace = true }
scraper = { workspace = true }
sns_archive_common = { path = "../common" }
tempfile = { workspace = true }
thirtyfour = { workspace = true }
tiktok = { path = "../tiktok" }
unicode-segmentation = { workspace = true }
url = { workspace = true }
weibo = { path = "../weibo" }
weverse = { path = "../weverse" }

[target.'cfg(unix)'.dependencies]
home-dir = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.clap]
workspace = true
features = ["derive"]

[dependencies.chrono]
workspace = true
features = ["std"]

[dependencies.lazy_static]
workspace = true

[dependencies.regex]
workspace = true
features = ["std"]

[dependencies.reqwest]
workspace = true
features = ["rustls-tls", "json", "stream"]

[dependencies.serde]
workspace = true
features = ["derive"]

[dependencies.serde_json]
workspace = true

[dependencies.tokio]
workspace = true
features = [
  "macros",
  "io-util",
  "io-std",
  "sync",
  "time",
  "rt-multi-thread",
  "fs",
  "process",
]

[dependencies.toml]
workspace = true
