[package]
name = "tiktok"
edition = "2021"
authors.workspace = true
version.workspace = true
description.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
filetime = { workspace = true }
futures = { workspace = true }
glob = { workspace = true }
htmlescape = { workspace = true }
js-sandbox = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls", "multipart"] }
scraper = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sns_archive_common = { path = "../common" }
time = { workspace = true, features = ["formatting"] }
tokio = { workspace = true, features = ["full"] }
