[package]
name = "weibo"
edition = "2021"
authors.workspace = true
version.workspace = true
description.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
futures = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, features = ["json", "cookies"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["preserve_order"] }
sns_archive_common = { path = "../common" }
time = { workspace = true }
tokio = { workspace = true, features = ["fs", "process"] }
url = { workspace = true }
