cargo-features = ["workspace-inheritance"]

[package]
name = "weverse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
hmac = { workspace = true }
lazy_static = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
sha1 = { workspace = true }
time = { workspace = true, features = ["formatting"]}
tokio = { workspapce = true, features = ["macros"] }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
dotenv = { workspace = true }
