cargo-features = ["workspace-inheritance"]

[package]
name = "weverse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
directories = { workspace = true }
futures = { workspace = true }
hmac = { workspace = true }
lazy_static = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
sha1 = { workspace = true }
sns_archive_common = { path = "../common" }
time = { workspace = true, features = ["formatting", "serde"]}
tokio = { workspapce = true, features = ["macros"] }
toml = { workspace = true }
unicode-segmentation = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
dotenv = { workspace = true }
async-once-cell = { workspace = true }
